[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dtocean-core = { path = "packages/dtocean-core", develop = true }
dtocean-dummy-module = { path = "packages/dtocean-dummy-module", develop = true }
dtocean-hydrodynamics = { path = "packages/dtocean-hydrodynamics", develop = true }
mdo-engine = { path = "packages/mdo-engine", develop = true }
polite-config = { path = "packages/polite-config", develop = true }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
mock = "^5.1.0"
pytest-cov = "^6.0.0"
pytest-qt = "^4.4.0"
pyside6 = "^6.8.1.1"

[tool.poetry.group.audit]
optional = true

[tool.poetry.group.audit.dependencies]
ruff = "^0.8.3"
pyright = "^1.1.390"
deptry = "^0.21.1"
