[tool.poetry]
version = "2026.3.4"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

[tool.poetry.group.dtocean.dependencies]
dtocean = { path = "packages/dtocean", develop = true, python = "<3.14" }

[tool.poetry.group.dtocean-app.dependencies]
dtocean-app = { path = "packages/dtocean-app", develop = true, python = "<3.14" }

[tool.poetry.group.dtocean-core.dependencies]
dtocean-core = { path = "packages/dtocean-core", develop = true, python = "<3.14" }

[tool.poetry.group.dtocean-docs.dependencies]
dtocean-docs = { path = "packages/dtocean-docs", develop = true }

[tool.poetry.group.dtocean-dummy-module.dependencies]
dtocean-dummy-module = { path = "packages/dtocean-dummy-module", develop = true }

[tool.poetry.group.dtocean-economics.dependencies]
dtocean-economics = { path = "packages/dtocean-economics", develop = true }

[tool.poetry.group.dtocean-hydrodynamics.dependencies]
dtocean-hydrodynamics = { path = "packages/dtocean-hydrodynamics", develop = true }

[tool.poetry.group.dtocean-qt.dependencies]
dtocean-qt = { path = "packages/dtocean-qt", develop = true }

[tool.poetry.group.mdo-engine.dependencies]
mdo-engine = { path = "packages/mdo-engine", develop = true }

[tool.poetry.group.polite-config.dependencies]
polite-config = { path = "packages/polite-config", develop = true }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jinja2 = "^3.1.6"
sphinx = "< 9"
sphinx-rtd-theme = "^3.0.2"
sphinx-multiversion = { git = "https://github.com/sphinx-contrib/multiversion.git" }
sphinx-autobuild = "^2025.8.25"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mock = "^5.1.0"
pytest = "^9.0.3"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"
pytz = "^2025.2"

[tool.poetry.group.test-qt]
optional = true

[tool.poetry.group.test-qt.dependencies]
pyside6 = "^6.8.1.1"
pytest-qt = "^4.5.0"

[tool.poetry.group.test-postgresql]
optional = true

[tool.poetry.group.test-postgresql.dependencies]
pytest-postgresql = "^7.0.1"

[tool.poetry.group.audit]
optional = true

[tool.poetry.group.audit.dependencies]
ruff = "^0.8.3"
pyright = "^1.1.395"
deptry = "^0.21.1"
pandas-stubs = "^3.0.0.260204"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
python-semantic-release = "^10.5.3"
pydantic = "^2.12.5"
tomli-w = "^1.2.0"

[tool.poetry.group.tox]
optional = true

[tool.poetry.group.tox.dependencies]
tox = "<4.47"
tox-uv = "<1.33.0"

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 80

[tool.semantic_release]
commit_parser = "scripts/dtocean_commit_parser.py:DTOceanCommitParser"
commit_message = """\
chore(release): root@{version}

Automatically generated by python-semantic-release
"""
tag_format = "root-v{version}"
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.main]
match = "(main)"

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.commit_parser_options]
scope_prefix = '(docs|root)'

[tool.semantic_release.commit_parser_options.path_filters.docs]
paths = ["docs"]

[tool.semantic_release.commit_parser_options.path_filters.dtocean]
paths = ["packages/dtocean"]

[tool.semantic_release.commit_parser_options.path_filters.dtocean-app]
paths = ["packages/dtocean-app"]
trigger_bump_level = 4

[tool.semantic_release.commit_parser_options.path_filters.dtocean-hydrodynamics]
paths = ["packages/dtocean-hydrodynamics"]
trigger_bump_level = 4
